--- a/src/app/splach-screen/splach-screen.component.html
+++ b/src/app/splach-screen/splach-screen.component.html
@@ -5,7 +5,7 @@
         <p>Do meditation. Stay focused. Live a healthy life.</p>
     </div>
     <div class="splach-connexion">
-        <div class="splach-login-button">Login With Email</div>
-        <div class="splach-create-account">Don't have an account? <a href="">Sign Up</a></div>
+        <a routerLink="/login" class="splach-login-button">Login With Email</a>
+        <div class="splach-create-account">Don't have an account? <a routerLink="/register">Sign Up</a></div>
     </div>
 </div>
