add: animation -> not working

--- a/src/app/login-screen/login-screen.component.html
+++ b/src/app/login-screen/login-screen.component.html
@@ -1,1 +1,20 @@
-<p>login-screen works!</p>
+<div class="login-content">
+    <div class="form-content">
+        <img src="../../assets/Logo.svg" alt="">
+        <h1>Sign In</h1>
+        <p>Sign in now to acces your excercises and saved music.</p>
+        <div class="login-entryfield">
+            <input type="text" required="required">
+            <label for="">Email Address</label>
+        </div>
+        <div class="login-entryfield">
+            <input type="password" required="required">
+            <label for="">Password</label>
+        </div>
+        <div class="forgot-pwd">Forgot Password?</div>
+
+        <div class="login-button">LOGIN</div>
+        <div class="login-signup">Don't have an account? <a routerLink="/register">Sign Up</a></div>
+    </div>
+    <img class="bottom-leaves" src="../../assets/leaves.svg" alt="">
+</div>
