--- a/src/app/splach-screen/splach-screen.component.css
+++ b/src/app/splach-screen/splach-screen.component.css
@@ -1,10 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Alegreya:wght@400;700;800&display=swap');
 
 .splach-content{
     position: relative;
     background-image: url("../../assets/27528111.png");
     background-size: cover;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     overflow: hidden;
 }
@@ -52,7 +51,7 @@
     top: 62%;
     left: -150%;
     transform: translate(-50%, -50%);
-    font-family: Alegreya Sans;
+    font-family: Alegreya;
     font-size: 20px;
     font-style: normal;
     font-weight: 500;
