add: regrister screen

--- a/src/app/register-screen/register-screen.component.html
+++ b/src/app/register-screen/register-screen.component.html
@@ -1,1 +1,23 @@
-<p>register-screen works!</p>
+<div class="login-content">
+    <div class="form-content">
+        <img src="../../assets/Logo.svg" alt="">
+        <h1>Sign Up</h1>
+        <p>Sign up now for free and start meditating, and explore Medic.</p>
+        <div class="login-entryfield">
+            <input type="text" required="required">
+            <label for="">Name</label>
+        </div>
+        <div class="login-entryfield">
+            <input type="text" required="required">
+            <label for="">Email Address</label>
+        </div>
+        <div class="login-entryfield">
+            <input type="password" required="required">
+            <label for="">Password</label>
+        </div>
+
+        <div class="login-button">SIGNUP</div>
+        <div class="login-signup">Already have an account? <a routerLink="/login">Sign In</a></div>
+    </div>
+    <img class="bottom-leaves" src="../../assets/leaves.svg" alt="">
+</div>
